--- a/web-data-viz/.env.dev
+++ b/web-data-viz/.env.dev
@@ -4,7 +4,7 @@ AMBIENTE_PROCESSO=desenvolvimento
 DB_HOST=localhost
 DB_DATABASE='opticar'
 DB_USER='root'
-DB_PASSWORD='@Zaqueuchavier123'
+DB_PASSWORD='root'
 DB_PORT=3306
 
 # Configurações do servidor de aplicação
