python, sql, webdataviz

--- a/web-data-viz/.env.dev
+++ b/web-data-viz/.env.dev
@@ -4,11 +4,18 @@ AMBIENTE_PROCESSO=desenvolvimento
 DB_HOST=localhost
 DB_DATABASE='opticar'
 DB_USER='root'
-DB_PASSWORD='root'
+DB_PASSWORD='@Zaqueuchavier123'
 DB_PORT=3306
 
-# Configurações do servidor de aplicação
+DB_HOST_FRIO='localhost'
+DB_DATABASE_FRIO='opticarFrio'
+DB_USER_FRIO='root'
+DB_PASSWORD_FRIO='@Zaqueuchavier123'
+DB_PORT_FRIO='3306'
+
 APP_PORT=3333
+APP_PORT_FRIO=3333
+
 APP_HOST=localhost
 
 # importante: caso sua senha contenha caracteres especiais, insira-a entre 'aspas'
