--- a/web-data-viz/package.json
+++ b/web-data-viz/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.17.1",
     "mysql2": "^3.9.4",
+    "node-fetch": "^3.3.2",
     "nodemon": "^2.0.7",
     "path": "^0.12.7"
   }
