correção no docker file

--- a/web-data-viz/.env
+++ b/web-data-viz/.env
@@ -17,6 +17,6 @@ DB_PORT_FRIO='3306'
 APP_PORT=80
 APP_PORT_FRIO=80
 
-APP_HOST=localhost
+APP_HOST=0.0.0.0
 
 # importante: caso sua senha contenha caracteres especiais, insira-a entre 'aspas'
