--- a/web-data-viz/.env
+++ b/web-data-viz/.env
@@ -2,21 +2,21 @@ AMBIENTE_PROCESSO=producao
 
 # Configurações de conexão com o banco de dados
 DB_HOST='localhost'
-DB_DATABASE='Opticar'
+DB_DATABASE='opticar'
 DB_USER='root'
-DB_PASSWORD='Opticar123'
+DB_PASSWORD='@Zaqueuchavier123'
 DB_PORT='3306'
 
 # Configurações do servidor de aplicação
 DB_HOST_FRIO='localhost'
-DB_DATABASE_FRIO='Opticar'
+DB_DATABASE_FRIO='opticar'
 DB_USER_FRIO='root'
-DB_PASSWORD_FRIO='Opticar123'
+DB_PASSWORD_FRIO='@Zaqueuchavier123'
 DB_PORT_FRIO='3306'
 
-APP_PORT=80
-APP_PORT_FRIO=80
+APP_PORT=8080
+APP_PORT_FRIO=8080
 
-APP_HOST=0.0.0.0
+APP_HOST=localhost
 
 # importante: caso sua senha contenha caracteres especiais, insira-a entre 'aspas'
