adiciona cadastro fabrica

--- a/web-data-viz/.env
+++ b/web-data-viz/.env
@@ -9,7 +9,7 @@ DB_PORT='3306'
 
 # Configurações do servidor de aplicação
 DB_HOST_FRIO='localhost'
-DB_DATABASE_FRIO='opticar'
+DB_DATABASE_FRIO='opticarFrio'
 DB_USER_FRIO='root'
 DB_PASSWORD_FRIO='@Zaqueuchavier123'
 DB_PORT_FRIO='3306'
