--- a/web-data-viz/.env.dev
+++ b/web-data-viz/.env.dev
@@ -1,21 +1,21 @@
 AMBIENTE_PROCESSO=desenvolvimento
 
 # Configurações de conexão com o banco de dados
-DB_HOST='23.20.206.123'
+DB_HOST='localhost'
 DB_DATABASE='opticar'
-DB_USER='admin'
-DB_PASSWORD='admin123'
+DB_USER='root'
+DB_PASSWORD='@Zaqueuchavier123'
 DB_PORT=3306
 
-DB_HOST_FRIO='23.20.206.123'
+DB_HOST_FRIO='localhost'
 DB_DATABASE_FRIO='opticarFrio'
-DB_USER_FRIO='admin'
-DB_PASSWORD_FRIO='admin123'
-DB_PORT_FRIO='3307'
+DB_USER_FRIO='root'
+DB_PASSWORD_FRIO='@Zaqueuchavier123'
+DB_PORT_FRIO='3306'
 
 APP_PORT=3333
 APP_PORT_FRIO=3333
 
-APP_HOST=0.0.0.0
+APP_HOST=localhost
 
 # importante: caso sua senha contenha caracteres especiais, insira-a entre 'aspas'
