--- a/web-data-viz/.env
+++ b/web-data-viz/.env
@@ -4,14 +4,14 @@ AMBIENTE_PROCESSO=producao
 DB_HOST='localhost'
 DB_DATABASE='opticar'
 DB_USER='root'
-DB_PASSWORD='@Zaqueuchavier123'
+DB_PASSWORD='root'
 DB_PORT='3306'
 
 # Configurações do servidor de aplicação
 DB_HOST_FRIO='localhost'
 DB_DATABASE_FRIO='opticarFrio'
 DB_USER_FRIO='root'
-DB_PASSWORD_FRIO='@Zaqueuchavier123'
+DB_PASSWORD_FRIO='root'
 DB_PORT_FRIO='3306'
 
 APP_PORT=8080
