--- a/web-data-viz/.env.dev
+++ b/web-data-viz/.env.dev
@@ -4,13 +4,13 @@ AMBIENTE_PROCESSO=desenvolvimento
 DB_HOST='localhost'
 DB_DATABASE='opticar'
 DB_USER='root'
-DB_PASSWORD='110645'
+DB_PASSWORD='@Zaqueuchavier123'
 DB_PORT=3306
 
 DB_HOST_FRIO='localhost'
 DB_DATABASE_FRIO='opticarFrio'
 DB_USER_FRIO='root'
-DB_PASSWORD_FRIO='110645'
+DB_PASSWORD_FRIO='@Zaqueuchavier123'
 DB_PORT_FRIO='3306'
 
 APP_PORT=3333
