--- a/Docker-files-sql/mysql-ec2/Dockerfile
+++ b/Docker-files-sql/mysql-ec2/Dockerfile
@@ -1,10 +1,10 @@
 FROM mysql:8.0
 
-COPY ./script-tabelas.sql  /docker-entrypoint-initdb.d/
+COPY ./novoscript-tabelas.sql  /docker-entrypoint-initdb.d/
 
 ENV MYSQL_ROOT_PASSWORD=opticar123
 ENV MYSQL_DATABASE=opticar
 ENV MYSQL_USER=admin
 ENV MYSQL_PASSWORD=admin123
 
-EXPOSE 3306
+EXPOSE 3307
