adiciona rota jira

--- a/web-data-viz/.env
+++ b/web-data-viz/.env
@@ -17,6 +17,12 @@ DB_PORT_FRIO='3306'
 APP_PORT=8080
 APP_PORT_FRIO=8080
 
+ATLASSIAN_USERNAME=horeaporutiu@gmail.com
+ATLASSIAN_API_KEY=ADD-YOUR-API-KEY-HERE
+DOMAIN=horeaporutiu
+PROJECT_KEY=TEST22
+PROJECT_NAME=TestProject22
+
 APP_HOST=0.0.0.0
 
 # importante: caso sua senha contenha caracteres especiais, insira-a entre 'aspas'
