--- a/web-data-viz/.env.dev
+++ b/web-data-viz/.env.dev
@@ -4,25 +4,23 @@ AMBIENTE_PROCESSO=desenvolvimento
 DB_HOST='localhost'
 DB_DATABASE='opticar'
 DB_USER='root'
-<<<<<<< Updated upstream
-DB_PASSWORD='root'
-=======
-DB_PASSWORD='110645'
->>>>>>> Stashed changes
+DB_PASSWORD='@Zaqueuchavier123'
 DB_PORT=3306
 
 DB_HOST_FRIO='localhost'
 DB_DATABASE_FRIO='opticarFrio'
 DB_USER_FRIO='root'
-<<<<<<< Updated upstream
-DB_PASSWORD_FRIO='root'
-=======
-DB_PASSWORD_FRIO='110645'
->>>>>>> Stashed changes
+DB_PASSWORD_FRIO='@Zaqueuchavier123'
 DB_PORT_FRIO='3306'
 
 APP_PORT=3333
 APP_PORT_FRIO=3333
+
+ATLASSIAN_USERNAME=vitor.almeida@sptech.school
+ATLASSIAN_API_KEY=ATATT3xFfGF0kFoYszVg-ht2La1wdAgdKYVcpD6iICBGf7bqpwf8-acie7Sgp72Cw-uKpdKfALn--6LVo1e51vaBIk9qTxRY_rrNxk_ko3eCUmdvIxlPQvtbdBpdvwJOTYgHAat-g7hdo2xUWU-E_RHKoBbKfoqjkdDW5bg04Kjsq1RSrLm_OFo=D26A2BB3
+DOMAIN=sptech-team-latencyslayer
+PROJECT_KEY=OP
+PROJECT_NAME=Opticar
 
 APP_HOST=localhost
 
