--- a/Docker-files-sql/compose.yaml
+++ b/Docker-files-sql/compose.yaml
@@ -1,4 +1,13 @@
 services:
+  site-opticar:
+    image: mahducosta/opticar-containers:node
+    ports:
+      - "3333:3333"
+    networks:
+      - rede-opticar
+    depends_on:
+      - opticarFrio
+      - opticarQuente
   opticarQuente:
     image: vitoralmeida06/projeto-pi:mysql-quente
     ports:
