acrescenta insert de alerta no python junto com processo

--- a/api_intermediaria/.env.dev
+++ b/api_intermediaria/.env.dev
@@ -1,13 +1,13 @@
 AMBIENTE_PROCESSO=desenvolvimento
 
 DB_HOST_FRIO='localhost'
-DB_DATABASE_FRIO='opticar'
+DB_DATABASE_FRIO='opticarFrio'
 DB_USER_FRIO='root'
 DB_PASSWORD_FRIO='@Zaqueuchavier123'
 DB_PORT_FRIO=3306
 
 DB_HOST_QUENTE='localhost'
-DB_DATABASE_QUENTE='opticarFrio'
+DB_DATABASE_QUENTE='opticarQuente'
 DB_USER_QUENTE='root'
 DB_PASSWORD_QUENTE='@Zaqueuchavier123'
 DB_PORT_QUENTE='3306'
