--- a/api_intermediaria/.env
+++ b/api_intermediaria/.env
@@ -3,13 +3,13 @@ AMBIENTE_PROCESSO=producao
 DB_HOST_FRIO='localhost'
 DB_DATABASE_FRIO='opticar'
 DB_USER_FRIO='root'
-DB_PASSWORD_FRIO='@Zaqueuchavier123'
+DB_PASSWORD_FRIO='matheus12'
 DB_PORT_FRIO=3306
 
 DB_HOST_QUENTE='localhost'
 DB_DATABASE_QUENTE='opticarFrio'
 DB_USER_QUENTE='root'
-DB_PASSWORD_QUENTE='@Zaqueuchavier123'
+DB_PASSWORD_QUENTE='matheus12'
 DB_PORT_QUENTE='3306'
 
 APP_PORT=3333
