api jira 100% funcional

--- a/coleta-analise-dados/script-python/coleta-analise-dados/API JIRA/.env
+++ b/coleta-analise-dados/script-python/coleta-analise-dados/API JIRA/.env
@@ -1,7 +1,7 @@
 DB_HOST=localhost
 DB_NAME=opticarQuente
 DB_USER=root
-DB_PASSWORD=matheus12
+DB_PASSWORD=@Zaqueuchavier123
 DB_PORT=3306
 JIRA_SERVER=https://matheus-saldanha.atlassian.net
 JIRA_EMAIL=opticarsolucoes@gmail.com
@@ -11,5 +11,5 @@ JIRA_PROJECT_KEY=MOT
 DB_HOST_FRIO=localhost
 DB_NAME_FRIO=opticarFrio
 DB_USER_FRIO=root
-DB_PASSWORD_FRIO=matheus12
+DB_PASSWORD_FRIO=@Zaqueuchavier123
 DB_PORT_FRIO=3306
