--- a/web-data-viz/.env.dev
+++ b/web-data-viz/.env.dev
@@ -3,14 +3,14 @@ AMBIENTE_PROCESSO=desenvolvimento
 DB_HOST_FRIO='localhost'
 DB_DATABASE_FRIO='opticarFrio'
 DB_USER_FRIO='root'
-DB_PASSWORD_FRIO='110645'
+DB_PASSWORD_FRIO='matheus12'
 DB_PORT_FRIO=3306
 
 
 DB_HOST_QUENTE='localhost'
 DB_DATABASE_QUENTE='opticarQuente'
 DB_USER_QUENTE='root'
-DB_PASSWORD_QUENTE='110645'
+DB_PASSWORD_QUENTE='matheus12'
 DB_PORT_QUENTE='3306'
 
 APP_PORT=3333
