--- a/api_intermediaria/package.json
+++ b/api_intermediaria/package.json
@@ -7,7 +7,7 @@
   },
 "author": "OPTICAR",
 "dependencies": {
-    "@google/generative-ai": "^0.6.1",
+    "@google/generative-ai": "0.24.1",
     "aws-sdk": "^2.1692.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -18,3 +18,4 @@
     "path": "^0.12.7"
 }
 }
+
