--- a/web-data-viz/package.json
+++ b/web-data-viz/package.json
@@ -17,6 +17,7 @@
     "mysql2": "^3.9.4",
     "node-fetch": "^3.3.2",
     "nodemon": "^2.0.7",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "simple-statistics": "^7.8.8"
   }
 }
