primeira tentativa integração bob analista

--- a/web-data-viz/.env.dev
+++ b/web-data-viz/.env.dev
@@ -3,7 +3,7 @@ AMBIENTE_PROCESSO=desenvolvimento
 DB_HOST_FRIO='localhost'
 DB_DATABASE_FRIO='opticarFrio'
 DB_USER_FRIO='root'
-DB_PASSWORD_FRIO='110645'
+DB_PASSWORD_FRIO='@Zaqueuchavier123'
 DB_PORT_FRIO='3306'
 
 
@@ -11,7 +11,7 @@ DB_PORT_FRIO='3306'
 DB_HOST_QUENTE='localhost'
 DB_DATABASE_QUENTE='opticarQuente'
 DB_USER_QUENTE='root'
-DB_PASSWORD_QUENTE='110645'
+DB_PASSWORD_QUENTE='@Zaqueuchavier123'
 
 APP_PORT=3333
 APP_PORT_FRIO=3333
@@ -21,6 +21,7 @@ ATLASSIAN_API_KEY=ATATT3xFfGF0eeMGWUwhJlF7Xmfcsio5eNmuMcrv9l-lNY-5BqI5ULlP_UtT91
 DOMAIN=matheus-saldanha
 PROJECT_KEY=MOT
 PROJECT_NAME=MotorsCars
+
 
 APP_HOST=localhost
 
