add: Dockers File e Compose

--- a/Docker-files-sql/quente/Dockerfile
+++ b/Docker-files-sql/quente/Dockerfile
@@ -1,10 +1,10 @@
 FROM mysql:8.0
 
-COPY ./novoscript-tabelasFrio.sql /docker-entrypoint-initdb.d/
+COPY ./OpticarFrio.sql /docker-entrypoint-initdb.d/
 
 ENV MYSQL_ROOT_PASSWORD=opticar123
 ENV MYSQL_DATABASE=opticarFrio
 ENV MYSQL_USER=admin
 ENV MYSQL_PASSWORD=admin123
 
-EXPOSE 3308
+EXPOSE 3306
