--- a/Docker-files-sql/compose.yaml
+++ b/Docker-files-sql/compose.yaml
@@ -1,32 +1,51 @@
 services:
   site-opticar:
-    image: mahducosta/opticar-containers:node
+    image: mahducosta/opticar:site-opticar
     ports:
       - "3333:3333"
     networks:
       - rede-opticar
     depends_on:
       - opticarFrio
+      - opticarQuente 
+
+  api-jira:
+    image: mahducosta/opticar:api-jira
+    networks:
+      - rede-opticar
+    container_name: api-jira
+    depends_on:
+      - opticarFrio
+      - opticarQuente          
+
+  api-intermediaria:
+    image: mahducosta/opticar:api-intermediaria
+    ports:
+      - "5000:5000"
+    networks:
+      - rede-opticar
+    container_name: api-intermediaria
+    depends_on:
+      - opticarFrio
       - opticarQuente
+
   opticarQuente:
-    image: vitoralmeida06/projeto-pi:mysql-quente
+    image: mahducosta/opticar:db-quente
     ports:
       - "3307:3306"
     networks:
       - rede-opticar
     container_name: opticarQuente
-    command: ["mysqld"]
     depends_on:
-      - opticarFrio
+      - opticarFrio   
 
   opticarFrio:
-    image: vitoralmeida06/projeto-pi:mysql-frio
+    image: mahducosta/opticar:db-frio
     ports:
-      - "3308:3306"
+      - "3306:3306"
     networks:
       - rede-opticar
     container_name: opticarFrio
-    command: ["mysqld"]
 
 networks:
   rede-opticar:
