--- a/Docker-files-sql/frio/Dockerfile
+++ b/Docker-files-sql/frio/Dockerfile
@@ -1,10 +1,10 @@
 FROM mysql:8.0
 
-COPY ./novoscript-tabelas.sql  /docker-entrypoint-initdb.d/
+COPY ./OpticarQuente.sql  /docker-entrypoint-initdb.d/
 
 ENV MYSQL_ROOT_PASSWORD=opticar123
-ENV MYSQL_DATABASE=opticar
+ENV MYSQL_DATABASE=opticarQuente
 ENV MYSQL_USER=admin
 ENV MYSQL_PASSWORD=admin123
 
-EXPOSE 3307
+EXPOSE 3306 
