envia rotas processo

--- a/web-data-viz/.env.dev
+++ b/web-data-viz/.env.dev
@@ -3,23 +3,14 @@ AMBIENTE_PROCESSO=desenvolvimento
 DB_HOST_FRIO='localhost'
 DB_DATABASE_FRIO='opticarFrio'
 DB_USER_FRIO='root'
-<<<<<<< Updated upstream
 DB_PASSWORD_FRIO='@Zaqueuchavier123'
-=======
-DB_PASSWORD_FRIO='110645'
->>>>>>> Stashed changes
 DB_PORT_FRIO='3306'
 
 # Configurações do servidor de aplicação
 DB_HOST_QUENTE='localhost'
 DB_DATABASE_QUENTE='opticarQuente'
 DB_USER_QUENTE='root'
-<<<<<<< Updated upstream
 DB_PASSWORD_QUENTE='@Zaqueuchavier123'
-=======
-DB_PASSWORD_QUENTE='110645'
-DB_PORT_FRIO='3306'
->>>>>>> Stashed changes
 
 APP_PORT=3333
 APP_PORT_FRIO=3333
@@ -31,7 +22,7 @@ PROJECT_KEY=MOT
 PROJECT_NAME=MotorsCars
 
 
-APP_HOST=0.0.0.0
+APP_HOST=localhost
 IP_INSTANCIA=44.208.190.196
 
 # importante: caso sua senha contenha caracteres especiais, insira-a entre 'aspas'
