--- a/web-data-viz/.env.dev
+++ b/web-data-viz/.env.dev
@@ -1,27 +1,17 @@
 AMBIENTE_PROCESSO=desenvolvimento
 
-DB_HOST_FRIO='44.208.190.196'
+DB_HOST_FRIO='34.198.19.147'
 DB_DATABASE_FRIO='opticarFrio'
-<<<<<<< Updated upstream
-DB_USER_FRIO='root'
-DB_PASSWORD_FRIO='@Zaqueuchavier123'
-=======
 DB_USER_FRIO='admin'
 DB_PASSWORD_FRIO='admin123'
->>>>>>> Stashed changes
 DB_PORT_FRIO='3306'
 
 # Configurações do servidor de aplicação
-DB_HOST_QUENTE='44.208.190.196'
+DB_HOST_QUENTE='34.198.19.147'
 DB_DATABASE_QUENTE='opticarQuente'
-<<<<<<< Updated upstream
-DB_USER_QUENTE='root'
-DB_PASSWORD_QUENTE='@Zaqueuchavier123'
-=======
 DB_USER_QUENTE='admin'
 DB_PASSWORD_QUENTE='admin123'
 DB_PORT_QUENTE='3307'
->>>>>>> Stashed changes
 
 APP_PORT=3333
 APP_PORT_FRIO=3333
@@ -33,7 +23,7 @@ PROJECT_KEY=MOT
 PROJECT_NAME=MotorsCars
 
 
-APP_HOST=localhost
-IP_INSTANCIA=44.208.190.196
+APP_HOST=0.0.0.0
+IP_INSTANCIA=34.198.19.147
 
-# importante: caso sua senha contenha caracteres especiais, insira-a entre 'aspas'
+# importante: caso sua senha contenha caracteres especiais, insira-a entre 'aspas'
