--- a/api_intermediaria/package.json
+++ b/api_intermediaria/package.json
@@ -8,7 +8,7 @@
     "author": "OPTICAR",
     "dependencies": {
         "multer": "^2.0.1",
-        "puppeteer": "^21.11.0",
+        "html-pdf": "^2.2.0",
         "@google/genai": "^0.14.1",
         "aws-sdk": "^2.1692.0",
         "cors": "^2.8.5",
