--- a/api_intermediaria/Dockerfile
+++ b/api_intermediaria/Dockerfile
@@ -1,34 +1,9 @@
-# Use uma imagem base do Node.js
-FROM node:20-slim
+FROM node:22.11.0-slim AS production
+WORKDIR /app
 
-# Defina o diretório de trabalho dentro do contêiner
-WORKDIR /usr/src/app
-
-# Mude para o usuário root para instalar dependências
-USER root
-
-# Instale as dependências do sistema necessárias
-RUN apt-get update && apt-get install -y \
-    libfontconfig \
-    libfreetype6 \
-    libx11-6 \
-    libxext6 \
-    libxrender1 \
-    wget \
-    bzip2 \
-    && rm -rf /var/lib/apt/lists/*
-
-# Copie os arquivos de dependência
-COPY package*.json ./
-
-# Instale as dependências do Node.js (incluindo phantomjs-prebuilt)
-RUN npm install
-
-# Copie o código da aplicação
 COPY . .
 
-# Mude para usuário não-privilegiado
-USER node
+ENV NODE_ENV=production
 
-# Comando para iniciar a aplicação
-CMD [ "node", "app.js" ]
+EXPOSE 5000
+CMD ["npm", "start"]
