feat: commit final versão backup

--- a/api_intermediaria/Dockerfile
+++ b/api_intermediaria/Dockerfile
@@ -7,35 +7,21 @@ WORKDIR /usr/src/app
 # Mude para o usuário root para instalar dependências
 USER root
 
-# Instale as dependências do sistema necessárias para PhantomJS
+# Instale as dependências do sistema necessárias
 RUN apt-get update && apt-get install -y \
     libfontconfig \
     libfreetype6 \
     libx11-6 \
     libxext6 \
     libxrender1 \
-    libjpeg62-turbo \
-    libxtst6 \
-    libxrandr2 \
-    libasound2 \
-    libpangocairo-1.0-0 \
-    libatk1.0-0 \
-    libcairo-gobject2 \
-    libgtk-3-0 \
-    libgdk-pixbuf2.0-0 \
     wget \
     bzip2 \
     && rm -rf /var/lib/apt/lists/*
 
-# Baixe e instale o PhantomJS manualmente
-RUN wget https://github.com/Medium/phantomjs/releases/download/v2.1.1/phantomjs-2.1.1-linux-x86_64.tar.bz2 \
-    && tar -xjf phantomjs-2.1.1-linux-x86_64.tar.bz2 \
-    && mv phantomjs-2.1.1-linux-x86_64/bin/phantomjs /usr/local/bin/ \
-    && chmod +x /usr/local/bin/phantomjs \
-    && rm -rf phantomjs-2.1.1-linux-x86_64*
-
-# Copie os arquivos de dependência e instale
+# Copie os arquivos de dependência
 COPY package*.json ./
+
+# Instale as dependências do Node.js (incluindo phantomjs-prebuilt)
 RUN npm install
 
 # Copie o código da aplicação
